@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-364: Clean up directories created by test suite (majakabiljo)
+
   GIRAPH-614: SplitMasterWorker=false is broken (majakabiljo)
 
   GIRAPH-616: Decouple vertices and edges in DiskBackedPartitionStore and avoid writing 
